🌷🥿 Updated with Glitch

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!--
 Requirements
-[  ] Two External Links
-[  ] Table
-[  ] Three CSS Rules
-[  ] Three Images
+[ 1 ] Two External Links
+[ yes ] Table
+[ yes ] Three CSS Rules
+[ 3 ] Three Images
 
 Select ONE Additional Feature to Add  
 [ no ] Feature 1 - Include a :hover feature
@@ -14,47 +14,183 @@ Select ONE Additional Feature to Add
 
 <!DOCTYPE html>
 <html>
+  <head>
+    <title>Project: Recipe book</title>
+    <meta charset="utf-8" />
+    <style>
+      body {
+        background-image: url("https://cdn.glitch.global/e7907b2a-a78f-4ee3-81d5-0e162d53d894/cookbook.png?v=1729173746475");
+      }
 
-<head>
-  <title>Project: Recipe book</title>
-  <meta charset="utf-8">
-  <style>
-  </style>
-</head>
+      .step {
+        background-color: skyblue;
+      }
 
-<body>
+      .tresleches {
+        color: brown;
+      }
 
-  <h1>____'s Recipe Book</h1>
+      h1 {
+        color: rgb(116, 105, 182);
+      }
+      h2 {
+        color: rgb(173, 136, 198);
+      }
 
-  <h2>Contents:</h2>
+      th {
+        background-color: pink;
+        font-family: "helvetica";
+        text-align: left;
+      }
 
-  <ol>
-    <li><a href="?">Recipe #1</a></li>
-  </ol>
+      td {
+        background-color: violet;
+        font-family: "helvetica";
+        text-align: left;
+      }
+    </style>
+  </head>
 
-  <h2 id="?">Recipe #1</h2>
+  <body>
+    <h1>Victoria's Recipe Book</h1>
 
-  <ul>
-    <li>Time: _</li>
-    <li>Serves: _</li>
-  </ul>
+    <h2>Contents:</h2>
 
-  <table>
-    <thead>
-      <tr>
-        <th>Ingredients</th>
-        <th>Quantity</th>
-      </tr>
-    </thead>
-    <tbody>
-    </tbody>
-  </table>
+    <ol>
+      <li>
+        <a
+          href="https://www.google.com/url?sa=i&url=https%3A%2F%2Fthatovenfeelin.com%2Ftres-leches-cake%2F&psig=AOvVaw3pZfqZK4Zzu3R8kBFyzxra&ust=1729259641088000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCLjQz_bIlYkDFQAAAAAdAAAAABAE"
+          ><strong class="tresleches">Tres Leches</strong></a
+        >
+      </li>
+    </ol>
 
-  <p><strong>Step 1:</strong> Do something.
-  </p>
+    <h2>Recipe #1: Tres Leches</h2>
 
-  <p><em>Source: <a href="?">Some recipes websites</a></em></p>
+    <ul>
+      <li>Time: Estimated 4 hours</li>
+      <li>Serves: 5-7 people</li>
+    </ul>
 
-</body>
+    <table>
+      <thead>
+        <tr>
+          <th>Meal</th>
+          <th>Ingredients</th>
+          <th>Quantity</th>
+        </tr>
+      </thead>
+      <tbody>
+        <td><strong class="tresleches">Tres Leches</strong></td>
+        <td>
+          <ul>
+            <li>Aluminum or any pan</li>
+            <li>Eggs</li>
+            <li>Sugar</li>
+            <li>Milk</li>
+            <li>Vanilla</li>
+            <li>Salted Butter</li>
+            <li>Oil</li>
+            <li>Flour</li>
+            <li>Baking Powder</li>
+            <li>Salt</li>
+            <li>Evaporated Milk</li>
+            <li>Sweetened Condensed Milk</li>
+            <li>Heavy Cream</li>
+            <li>Cinnamon (optional)</li>
+            <li>Strawberries (optional)</li>
+          </ul>
+        </td>
+        <td>
+          <ul>
+            <li>N/A</li>
+            <li>5</li>
+            <li>1 1/4 cup + 1/2 cup</li>
+            <li>1/4 cup + 1/2 cup</li>
+            <li>3 tsp</li>
+            <li>1/3 cup</li>
+            <li>2 tbsp + 1 tsp</li>
+            <li>1+1/4 cup</li>
+            <li>2 tsp</li>
+            <li>2 pinches</li>
+            <li>1 can</li>
+            <li>1 can</li>
+            <li>2 cups</li>
+            <li>N/A</li>
+            <li>N/A</li>
+          </ul>
+        </td>
+      </tbody>
+    </table>
 
+    <p>
+      <strong
+        ><strong class="step">Step 1:</strong> Seperate whites and yolks from
+        the eggs</strong
+      >
+      <br />
+      <strong
+        ><strong class="step">Step 2:</strong> Whisk egg whites until
+        whipped</strong
+      >
+      <br />
+      <strong
+        ><strong class="step">Step 3:</strong> Add 1 1/4 cup of sugar to the egg
+        yolks</strong
+      >
+      <br />
+      <strong
+        ><strong class="step">Step 4:</strong> Add 1/4 cup milk, 2 tsp vannilla,
+        1/3 cup salted butter, and 2 tbsp of oil into the egg yolks</strong
+      >
+      <br />
+      <strong
+        ><strong class="step">Step 5:</strong> Add 1 1/4 flour, 2 tsp baking
+        powder, and a pinch of salt into the egg yolks</strong
+      >
+      <br />
+      <strong
+        ><strong class="step">Step 6:</strong> Fold in/mix egg whites into the
+        egg yolk mixture</strong
+      >
+      <br />
+      <strong
+        ><strong class="step">Step 7:</strong> Grease pan and set oven to 350
+        degress. Put mix into the pan and leave it in the oven for 20-30
+        mins</strong
+      >
+      <br />
+      <strong
+        ><strong class="step">Step 8:</strong> Poke holes in the cake once out
+        the oven</strong
+      >
+      <br />
+      <strong
+        ><strong class="step">Step 9:</strong> Pour evaporated milk, sweetened
+        condensed milk, 1/2 cup milk and 1 tsp of vanilla onto the cake. Let
+        cake sit for around 2 hours</strong
+      >
+      <br />
+      <strong
+        ><strong class="step">Step 10:</strong> In a seperate bowl, mix 2 cups
+        heavy cream, 1/2 cup sugar, 1 tsp vanilla, and a pinch of salt together
+        until it has a whipped cream consistency</strong
+      >
+      <br />
+      <strong
+        ><strong class="step">Step 11:</strong> Put your whipped cream on top of
+        the cake, add cinnamon and strawberries on top (optional). All
+        done!</strong
+      >
+    </p>
+
+    <img
+      src="https://cdn.glitch.global/e7907b2a-a78f-4ee3-81d5-0e162d53d894/giphy.webp?v=1729606589597">
+      <p
+    />
+    <em
+      >Source:
+      <a href="https://www.tiktok.com/t/ZP88HfMEp/">Recipe's Website</a></em
+    >
+  </body>
 </html>
