🛼🆓 Updated with Glitch

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ Requirements
 Select ONE Additional Feature to Add  
 [ no ] Feature 1 - Include a :hover feature
 [ no ] Feature 2 - Include at least two Internal links
-[ no ] Feature 3 - Include a list in a tabl
+[ yes ] Feature 3 - Include a list in a tabl
 [ no ] Feature 4 - Include at least two background images in a table
 -->
 
@@ -55,7 +55,10 @@ Select ONE Additional Feature to Add
     <h1>Victoria's Recipe Book</h1>
 
     <h2>Contents:</h2>
-
+    <img
+      src="https://cdn.glitch.global/e7907b2a-a78f-4ee3-81d5-0e162d53d894/tres%20leches.jpg?v=1729691327094"
+      width="200"
+    />
     <ol>
       <li>
         <a
@@ -185,9 +188,9 @@ Select ONE Additional Feature to Add
     </p>
 
     <img
-      src="https://cdn.glitch.global/e7907b2a-a78f-4ee3-81d5-0e162d53d894/giphy.webp?v=1729606589597">
-      <p
+      src="https://cdn.glitch.global/e7907b2a-a78f-4ee3-81d5-0e162d53d894/giphy.webp?v=1729606589597"
     />
+    <p />
     <em
       >Source:
       <a href="https://www.tiktok.com/t/ZP88HfMEp/">Recipe's Website</a></em
